--- a/files/Readme
+++ b/files/Readme
@@ -1,4 +1,4 @@
-VCF file:
-LinkimputeR profile file:
-LinkimputeR jar file:
+VCF file: chromsome1_selected_site_biallellic.vcf.gz
+LinkimputeR profile file: accuracy.ini
+LinkimputeR jar file: LinkImputeR.jar
 accuracy txt file:
