--- a/files/Readme
+++ b/files/Readme
@@ -1,4 +1,5 @@
-VCF file: chromsome1_selected_site_biallellic.vcf.gz
+# Filename lists
+VCF file: [chromsome1_selected_site_biallellic.vcf.gz](https://drive.google.com/file/d/1BLYNzwzmy6EbxNY3TQQEhLGnbf5EpaZZ/view?usp=drive_link)
 LinkimputeR profile file: accuracy.ini
 LinkimputeR jar file: LinkImputeR.jar
 accuracy txt file:
